--- a/exercises/python-grab-bag.ipynb
+++ b/exercises/python-grab-bag.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0bd466ef",
    "metadata": {},
@@ -33,6 +34,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5034c3fd",
    "metadata": {},
@@ -47,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "7077f534",
    "metadata": {},
    "outputs": [
@@ -55,10 +57,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "incorrect!\n",
-      "incorrect!\n",
       "correct!\n",
-      "incorrect!\n"
+      "correct!\n",
+      "correct!\n",
+      "correct!\n"
      ]
     }
    ],
@@ -67,7 +69,9 @@
     "def n_equal_in_list(li,n):\n",
     "    count = 0\n",
     "    \n",
-    "    # write code here\n",
+    "    for i in li:\n",
+    "        if i == n:\n",
+    "            count += 1\n",
     "    \n",
     "    return count\n",
     "\n",
@@ -87,6 +91,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "26989269",
    "metadata": {},
@@ -100,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "01933978",
    "metadata": {},
    "outputs": [
@@ -108,12 +113,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "incorrect!\n",
-      "incorrect!\n",
-      "incorrect!\n",
-      "incorrect!\n",
       "correct!\n",
-      "incorrect!\n"
+      "correct!\n",
+      "correct!\n",
+      "correct!\n",
+      "correct!\n",
+      "correct!\n"
      ]
     }
    ],
@@ -121,8 +126,14 @@
     "def find_second_smallest(li):\n",
     "    smallest = min(li)\n",
     "    second_smallest = None\n",
-    "    \n",
-    "    # write code here\n",
+    "\n",
+    "    for i in li:\n",
+    "        if i != smallest:\n",
+    "            if second_smallest != None:\n",
+    "                if i < second_smallest:\n",
+    "                    second_smallest = i\n",
+    "            else:\n",
+    "                second_smallest = i\n",
     "    \n",
     "    return second_smallest\n",
     "\n",
@@ -142,6 +153,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9607c9ca",
    "metadata": {},
@@ -156,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "f1ce901d",
    "metadata": {},
    "outputs": [
@@ -166,16 +178,16 @@
      "text": [
       "(1,1) = 1 correct!\n",
       "(3,1) = 1 correct!\n",
-      "(3,2) = 2 not correct!\n",
+      "(3,2) = 1 correct!\n",
       "(4,2) = 2 correct!\n",
       "(6,3) = 3 correct!\n",
-      "(6,4) = 4 not correct!\n",
-      "(6,5) = 5 not correct!\n",
-      "(7,3) = 3 not correct!\n",
-      "(10,3) = 3 not correct!\n",
-      "(10,4) = 4 not correct!\n",
-      "(153,68) = 68 not correct!\n",
-      "(2037,1455) = 1455 not correct!\n"
+      "(6,4) = 2 correct!\n",
+      "(6,5) = 1 correct!\n",
+      "(7,3) = 1 correct!\n",
+      "(10,3) = 1 correct!\n",
+      "(10,4) = 2 correct!\n",
+      "(153,68) = 17 correct!\n",
+      "(2037,1455) = 291 correct!\n"
      ]
     }
    ],
@@ -184,8 +196,11 @@
     "    assert a>0 and b>0\n",
     "    assert a>=b\n",
     "    \n",
-    "    # write code here\n",
-    "    \n",
+    "    while (a%b !=0):   \n",
+    "            aa = b\n",
+    "            bb = a%b\n",
+    "            a = aa\n",
+    "            b = bb\n",
     "    return b\n",
     "    \n",
     "tests = [(1,1,1),(3,1,1),(3,2,1),(4,2,2),(6,3,3),(6,4,2),(6,5,1),\n",
@@ -205,6 +220,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2f0807dc",
    "metadata": {},
@@ -217,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "9826b249",
    "metadata": {},
    "outputs": [
@@ -225,7 +241,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "incorrect!\n"
+      "correct!\n"
      ]
     }
    ],
@@ -234,7 +250,9 @@
     "def count_the_vowels(s):\n",
     "    vowels = 0 \n",
     "    \n",
-    "    # write code here\n",
+    "    for i in s:\n",
+    "        if i in ['a', 'e', 'i', 'o','u']:\n",
+    "            vowels += 1\n",
     "    \n",
     "    return vowels\n",
     "\n",
@@ -251,6 +269,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "945c0de7",
    "metadata": {},
@@ -264,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "id": "779077af",
    "metadata": {},
    "outputs": [
@@ -272,7 +291,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "incorrect!\n"
+      "correct!\n"
      ]
     }
    ],
@@ -281,14 +300,23 @@
     "\n",
     "def list_uniq(l_in):\n",
     "    l_out = []\n",
-    " \n",
-    "    # write code here\n",
-    "    \n",
+    "\n",
+    "    l_in.sort()\n",
+    "\n",
+    "    for i in range(len(l_in)):\n",
+    "        if i != 0:  \n",
+    "            prev = l_in[i-1]\n",
+    "            if l_in[i] != prev:\n",
+    "                l_out.append(l_in[i])\n",
+    "        elif i == 0:\n",
+    "            l_out.append(l_in[i])\n",
+    "\n",
     "    return l_out    \n",
     "\n",
     "def test_list_uniq():\n",
     "    l_in = [3,2,6,4,1,5,4,4,1,3,5,6,9]\n",
-    "    ans = [1, 2, 4, 3, 5, 6, 9]\n",
+    "    ans = [1, 2, 3, 4, 5, 6, 9]\n",
+    "    #ans = [1, 2, 4, 3, 5, 6, 9]\n",
     "    l_out = list_uniq(l_in)\n",
     "    l_out.sort()\n",
     "    if ans == l_out:\n",
@@ -300,6 +328,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "dc305f45",
    "metadata": {},
@@ -315,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 51,
    "id": "52256b4a",
    "metadata": {},
    "outputs": [
@@ -326,7 +355,8 @@
       "correct!\n",
       "not a deep copy!\n",
       "not a deep copy!\n",
-      "not a deep copy!\n"
+      "not a deep copy!\n",
+      "[1, 2, [None, [4, 5]]]\n"
      ]
     }
    ],
@@ -337,9 +367,8 @@
     "    \n",
     "    def deep_list_copy_x(l):\n",
     "        l_c = l[:]\n",
-    "        \n",
-    "        # write code here\n",
-    "        \n",
+    "\n",
+    "               \n",
     "        return l_c\n",
     "    \n",
     "    assert isinstance(l,list_type)\n",
@@ -370,7 +399,6 @@
     "        else:\n",
     "            print('definitely not correct!')\n",
     "\n",
-    "\n",
     "tests = [\n",
     "    [1,2,3], [[1,2],['a','b'],3], [[1,['a','b'],3],'c',['d',[4,'e']]],\n",
     "    [1,2,[3,[4,5]]]\n",
@@ -380,6 +408,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3edaf660",
    "metadata": {},
@@ -405,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
    "id": "f4d18599",
    "metadata": {},
    "outputs": [
@@ -413,16 +442,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0: None\n",
-      "1: None\n",
-      "2: None\n",
-      "3: None\n",
-      "4: None\n",
-      "5: None\n",
-      "6: None\n",
-      "7: None\n",
-      "8: None\n",
-      "9: None\n"
+      "0: 2\n",
+      "1: 1\n",
+      "2: 0\n",
+      "3: 0\n",
+      "4: 0\n",
+      "5: 0\n",
+      "6: 0\n",
+      "7: 0\n",
+      "8: 0\n",
+      "9: 0\n"
      ]
     }
    ],
@@ -433,8 +462,18 @@
     "        self.a, self.b = None, None\n",
     "        \n",
     "    def next(self):\n",
-    "        \n",
-    "        # write code here\n",
+    "\n",
+    "        # if self.a==None and self.b == None:\n",
+    "        #     self.a = 1\n",
+    "        #     self.b = 1\n",
+    "        #     c = + self.b\n",
+    "        # else:\n",
+    "        #     a = self.b\n",
+    "        #     b = c\n",
+    "        #     self.a = a\n",
+    "        #     self.b = b\n",
+    "        #     c = self.a + self.b\n",
+    "  \n",
     "        \n",
     "        return self.b\n",
     "    \n",
@@ -448,6 +487,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "864d80bd",
    "metadata": {},
@@ -477,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 45,
    "id": "255f60d8",
    "metadata": {},
    "outputs": [
@@ -485,16 +525,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0: []\n",
-      "1: []\n",
-      "2: []\n",
-      "3: []\n",
-      "4: []\n",
-      "5: []\n",
-      "6: []\n",
-      "7: []\n",
-      "8: []\n",
-      "9: []\n"
+      "0: [1]\n"
+     ]
+    },
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'c' referenced before assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[45], line 29\u001b[0m\n\u001b[0;32m     26\u001b[0m         \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mi\u001b[39m}\u001b[39;00m\u001b[39m: \u001b[39m\u001b[39m{\u001b[39;00mpascal\u001b[39m.\u001b[39mnext()\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n\u001b[0;32m     28\u001b[0m n \u001b[39m=\u001b[39m \u001b[39m10\u001b[39m\n\u001b[1;32m---> 29\u001b[0m print_some_rows(n)\n",
+      "Cell \u001b[1;32mIn[45], line 26\u001b[0m, in \u001b[0;36mprint_some_rows\u001b[1;34m(n)\u001b[0m\n\u001b[0;32m     24\u001b[0m pascal \u001b[39m=\u001b[39m Pascal()\n\u001b[0;32m     25\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(n):\n\u001b[1;32m---> 26\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mi\u001b[39m}\u001b[39;00m\u001b[39m: \u001b[39m\u001b[39m{\u001b[39;00mpascal\u001b[39m.\u001b[39mnext()\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[45], line 17\u001b[0m, in \u001b[0;36mPascal.next\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     15\u001b[0m a \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     16\u001b[0m b \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m---> 17\u001b[0m c \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     18\u001b[0m r \u001b[39m=\u001b[39m (a\u001b[39m+\u001b[39mb)\u001b[39m*\u001b[39m\u001b[39m*\u001b[39mc\n\u001b[0;32m     19\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mrow\u001b[39m.\u001b[39mappend(r) \n",
+      "\u001b[1;31mUnboundLocalError\u001b[0m: local variable 'c' referenced before assignment"
      ]
     }
    ],
@@ -506,7 +550,18 @@
     "        \n",
     "    def next(self):\n",
     "        \n",
-    "        # write code here \n",
+    "        # if (self.row == []):\n",
+    "        #     a = 1\n",
+    "        #     b = 1\n",
+    "        #     c = 0\n",
+    "        #     r = (a+b)**c\n",
+    "        #     self.row.append(r)\n",
+    "        # else:\n",
+    "        #     a = 1\n",
+    "        #     b = 1\n",
+    "        #     c += 1\n",
+    "        #     r = (a+b)**c\n",
+    "        #     self.row.append(r) \n",
     "        \n",
     "        return self.row\n",
     "    \n",
@@ -528,6 +583,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7ed79256",
    "metadata": {},
