--- a/exercises/classic-sorting-algorithms.ipynb
+++ b/exercises/classic-sorting-algorithms.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "95b43d99",
    "metadata": {},
@@ -43,6 +44,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5b44bbcd",
    "metadata": {},
@@ -65,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 56,
    "id": "9ef4d08b",
    "metadata": {},
    "outputs": [
@@ -73,7 +75,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "broken!\n"
+      "correct!\n"
      ]
     }
    ],
@@ -85,16 +87,21 @@
     "    selection sort the list a\n",
     "    \"\"\"\n",
     "    \n",
-    "    # assert LI\n",
+    "    assert len(a) > 0\n",
     "    for i in range(len(a)-1):\n",
-    "        \n",
-    "        # i is where to place the smallest number amount [i:]\n",
-    "        # write code here \n",
-    "\n",
+    "        min = i\n",
+    "        for j in range(i,len(a)):\n",
+    "            if a[min] > a[j]:\n",
+    "                min = j\n",
+    "        if min != i:\n",
+    "            x = a[min]\n",
+    "            a[min] = a[i]\n",
+    "            a[i] = x   \n",
     "        pass\n",
-    "        # assert LI\n",
-    "    \n",
-    "    # assert LI\n",
+    "        # assert LI    \n",
+    "    b = a\n",
+    "    b.sort()\n",
+    "    assert b==a\n",
     "    return a\n",
     "\n",
     "def test_selection_sort():\n",
@@ -110,6 +117,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "11418c85",
    "metadata": {},
@@ -176,6 +184,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6d5fbf72",
    "metadata": {},
@@ -274,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
