--- a/exercises/python-grab-bag.ipynb
+++ b/exercises/python-grab-bag.ipynb
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 53,
    "id": "f4d18599",
    "metadata": {},
    "outputs": [
@@ -442,16 +442,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0: 2\n",
       "1: 1\n",
-      "2: 0\n",
-      "3: 0\n",
-      "4: 0\n",
-      "5: 0\n",
-      "6: 0\n",
-      "7: 0\n",
-      "8: 0\n",
-      "9: 0\n"
+      "2: 2\n",
+      "3: 3\n",
+      "4: 5\n",
+      "5: 8\n",
+      "6: 13\n",
+      "7: 21\n",
+      "8: 34\n",
+      "9: 55\n",
+      "10: 89\n"
      ]
     }
    ],
@@ -463,24 +463,22 @@
     "        \n",
     "    def next(self):\n",
     "\n",
-    "        # if self.a==None and self.b == None:\n",
-    "        #     self.a = 1\n",
-    "        #     self.b = 1\n",
-    "        #     c = + self.b\n",
-    "        # else:\n",
-    "        #     a = self.b\n",
-    "        #     b = c\n",
-    "        #     self.a = a\n",
-    "        #     self.b = b\n",
-    "        #     c = self.a + self.b\n",
-    "  \n",
+    "        if self.a==None and self.b == None:\n",
+    "            self.b = 1\n",
+    "        elif self.a ==None:\n",
+    "            self.a = 1\n",
+    "            self.b += self.a\n",
+    "        else:\n",
+    "            a = self.b\n",
+    "            self.b += self.a\n",
+    "            self.a = a\n",
     "        \n",
     "        return self.b\n",
     "    \n",
     "def print_some_fibs(n):\n",
     "    fib = Fibonacci()\n",
     "    for i in range(n):\n",
-    "        print(f'{i}: {fib.next()}')\n",
+    "        print(f'{i+1}: {fib.next()}')\n",
     "    \n",
     "n = 10\n",
     "print_some_fibs(n)\n"
@@ -517,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 71,
    "id": "255f60d8",
    "metadata": {},
    "outputs": [
@@ -525,20 +523,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0: [1]\n"
-     ]
-    },
-    {
-     "ename": "UnboundLocalError",
-     "evalue": "local variable 'c' referenced before assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[45], line 29\u001b[0m\n\u001b[0;32m     26\u001b[0m         \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mi\u001b[39m}\u001b[39;00m\u001b[39m: \u001b[39m\u001b[39m{\u001b[39;00mpascal\u001b[39m.\u001b[39mnext()\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n\u001b[0;32m     28\u001b[0m n \u001b[39m=\u001b[39m \u001b[39m10\u001b[39m\n\u001b[1;32m---> 29\u001b[0m print_some_rows(n)\n",
-      "Cell \u001b[1;32mIn[45], line 26\u001b[0m, in \u001b[0;36mprint_some_rows\u001b[1;34m(n)\u001b[0m\n\u001b[0;32m     24\u001b[0m pascal \u001b[39m=\u001b[39m Pascal()\n\u001b[0;32m     25\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(n):\n\u001b[1;32m---> 26\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mi\u001b[39m}\u001b[39;00m\u001b[39m: \u001b[39m\u001b[39m{\u001b[39;00mpascal\u001b[39m.\u001b[39mnext()\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n",
-      "Cell \u001b[1;32mIn[45], line 17\u001b[0m, in \u001b[0;36mPascal.next\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     15\u001b[0m a \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     16\u001b[0m b \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m---> 17\u001b[0m c \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     18\u001b[0m r \u001b[39m=\u001b[39m (a\u001b[39m+\u001b[39mb)\u001b[39m*\u001b[39m\u001b[39m*\u001b[39mc\n\u001b[0;32m     19\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mrow\u001b[39m.\u001b[39mappend(r) \n",
-      "\u001b[1;31mUnboundLocalError\u001b[0m: local variable 'c' referenced before assignment"
+      "0: [1]\n",
+      "1: [1, 1]\n",
+      "2: [1, 2, 1]\n",
+      "3: [1, 3, 3, 1]\n",
+      "4: [1, 4, 6, 4, 1]\n",
+      "5: [1, 5, 10, 10, 5, 1]\n",
+      "6: [1, 6, 15, 20, 15, 6, 1]\n",
+      "7: [1, 7, 21, 35, 35, 21, 7, 1]\n",
+      "8: [1, 8, 28, 56, 70, 56, 28, 8, 1]\n",
+      "9: [1, 9, 36, 84, 126, 126, 84, 36, 9, 1]\n"
      ]
     }
    ],
@@ -550,19 +544,17 @@
     "        \n",
     "    def next(self):\n",
     "        \n",
-    "        # if (self.row == []):\n",
-    "        #     a = 1\n",
-    "        #     b = 1\n",
-    "        #     c = 0\n",
-    "        #     r = (a+b)**c\n",
-    "        #     self.row.append(r)\n",
-    "        # else:\n",
-    "        #     a = 1\n",
-    "        #     b = 1\n",
-    "        #     c += 1\n",
-    "        #     r = (a+b)**c\n",
-    "        #     self.row.append(r) \n",
-    "        \n",
+    "        if self.row == []:\n",
+    "            self.row = [1]\n",
+    "        elif self.row == [1]:\n",
+    "            self.row.append(1)\n",
+    "        else:\n",
+    "            r = [1]\n",
+    "            for i in range (len(self.row)-1):\n",
+    "                r.append(self.row[i] + self.row[i+1])\n",
+    "            r.append(1)\n",
+    "            self.row = r\n",
+    "                \n",
     "        return self.row\n",
     "    \n",
     "def print_some_rows(n):\n",
