--- a/exercises/python-grab-bag.ipynb
+++ b/exercises/python-grab-bag.ipynb
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 74,
    "id": "52256b4a",
    "metadata": {},
    "outputs": [
@@ -353,10 +353,9 @@
      "output_type": "stream",
      "text": [
       "correct!\n",
-      "not a deep copy!\n",
-      "not a deep copy!\n",
-      "not a deep copy!\n",
-      "[1, 2, [None, [4, 5]]]\n"
+      "correct!\n",
+      "correct!\n",
+      "correct!\n"
      ]
     }
    ],
@@ -367,8 +366,10 @@
     "    \n",
     "    def deep_list_copy_x(l):\n",
     "        l_c = l[:]\n",
-    "\n",
-    "               \n",
+    "        for i in range(len(l)):\n",
+    "            if type(l[i]) == type([]):\n",
+    "                l_c[i] = deep_list_copy_x(l[i])\n",
+    "                               \n",
     "        return l_c\n",
     "    \n",
     "    assert isinstance(l,list_type)\n",
