--- a/exercises/classic-sorting-algorithms.ipynb
+++ b/exercises/classic-sorting-algorithms.ipynb
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 96,
    "id": "0274814b",
    "metadata": {},
    "outputs": [
@@ -324,7 +324,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "broken!\n"
+      "correct!\n"
      ]
     }
    ],
@@ -332,10 +332,28 @@
     "\n",
     "\n",
     "def merge_them(cl,ch):\n",
+    "    merge_sort(cl)\n",
+    "    merge_sort(ch)\n",
+    "    i = 0\n",
+    "    j = 0\n",
+    "    L3 = []\n",
+    "    while i < len(cl) and j < len(ch):\n",
+    "        if cl[i] <= ch[j]:\n",
+    "            L3.append(cl[i])\n",
+    "            i+=1\n",
+    "        else:\n",
+    "            L3.append(ch[j])\n",
+    "            j+=1\n",
+    "\n",
+    "    while i < len(cl):\n",
+    "        L3.append(cl[i])\n",
+    "        i+=1\n",
     "    \n",
-    "    # write code here\n",
-    "    \n",
-    "    return cl+ch\n",
+    "    while j < len(ch):\n",
+    "        L3.append(ch[j])\n",
+    "        j+=1\n",
+    "\n",
+    "    return L3\n",
     "\n",
     "def merge_sort(c):\n",
     "    if len(c)<2 : \n",
