--- a/exercises/interval-sum.ipynb
+++ b/exercises/interval-sum.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cc297ba2",
    "metadata": {},
@@ -187,7 +188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
