--- a/exercises/interval-sum.ipynb
+++ b/exercises/interval-sum.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "6a216e31",
    "metadata": {},
    "outputs": [
@@ -40,26 +40,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "broken!\n",
-      "broken!\n",
-      "broken!\n",
-      "broken!\n",
-      "broken!\n",
-      "broken!\n",
-      "broken!\n",
-      "broken!\n"
+      "--Max:  (21.0, 0, 6)\n",
+      "correct!\n",
+      "correct!\n",
+      "--Max:  (120.0, 0, 15)\n",
+      "correct!\n",
+      "correct!\n",
+      "--Max:  (1275.0, 0, 50)\n",
+      "correct!\n",
+      "correct!\n",
+      "--Max:  (20301.0, 0, 201)\n",
+      "correct!\n",
+      "correct!\n"
      ]
     }
    ],
    "source": [
-    "# using slices\n",
-    "\n",
-    "\n",
     "def max_interval(a):\n",
     "    n = len(a)\n",
-    "    max_v, max_i, max_j = a[0], 0, 0 \n",
-    "    \n",
-    "    pass\n",
+    "    max_v, max_i, max_j = a[0], 0, 0\n",
+    "    for i in range(n):\n",
+    "        for j in range(n + 1):\n",
+    "            if sum(a[i:j]) > max_v:\n",
+    "                max_v = (sum(a[i:j]))\n",
+    "                max_i = i\n",
+    "                max_j = j\n",
+    "                \n",
+    "\n",
+    "    # print(max_v, max_i, max_j)\n",
     "\n",
     "    return (max_v, max_i, max_j)\n",
     "\n",
@@ -124,8 +132,10 @@
     "    m[0] = a[0]\n",
     "    # LI established - m and j correct up to including i=0\n",
     "    for i in range(1,n):\n",
-    "\n",
-    "        pass\n",
+    "        if m[i] > n:\n",
+    "            \n",
+    "            \n",
+    "        # pass\n",
     "\n",
     "    v = max(m)\n",
     "    k = m.index(v)\n",
