--- a/exercises/interval-sum.ipynb
+++ b/exercises/interval-sum.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "6a216e31",
    "metadata": {},
    "outputs": [
@@ -40,16 +40,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--Max:  (21.0, 0, 6)\n",
       "correct!\n",
       "correct!\n",
-      "--Max:  (120.0, 0, 15)\n",
       "correct!\n",
       "correct!\n",
-      "--Max:  (1275.0, 0, 50)\n",
       "correct!\n",
       "correct!\n",
-      "--Max:  (20301.0, 0, 201)\n",
       "correct!\n",
       "correct!\n"
      ]
@@ -93,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "dc1ac59b",
    "metadata": {},
    "outputs": [
@@ -101,18 +97,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "broken!\n",
-      "broken!\n",
-      "broken!\n",
-      "broken!\n",
-      "broken!\n",
-      "broken!\n",
-      "broken!\n",
-      "broken!\n",
-      "broken!\n",
-      "broken!\n",
-      "broken!\n",
-      "broken!\n"
+      "correct!\n",
+      "correct!\n",
+      "correct!\n",
+      "correct!\n",
+      "correct!\n",
+      "correct!\n",
+      "correct!\n",
+      "correct!\n",
+      "correct!\n",
+      "correct!\n",
+      "correct!\n",
+      "correct!\n"
      ]
     }
    ],
@@ -132,10 +128,12 @@
     "    m[0] = a[0]\n",
     "    # LI established - m and j correct up to including i=0\n",
     "    for i in range(1,n):\n",
-    "        if m[i] > n:\n",
-    "            \n",
-    "            \n",
-    "        # pass\n",
+    "        if m[i-1] >= 0:\n",
+    "            m[i] = m[i-1]+a[i]\n",
+    "            j[i] = j[i-1]\n",
+    "        else:\n",
+    "            m[i] = a[i]\n",
+    "            j[i] = i\n",
     "\n",
     "    v = max(m)\n",
     "    k = m.index(v)\n",
@@ -165,7 +163,6 @@
     "        test[i] = test[i]-n\n",
     "    ans = max_interval(test)\n",
     "    if ans == max_interval_dyn(test):\n",
-    "        print(ans)\n",
     "        print(\"correct!\")\n",
     "    else:\n",
     "        print(\"broken!\")\n",
